...
                ),
                Container(
                  height: 70,
                  color: Colors.blueGrey,
                  width: double.infinity,
                  child: TextButton(
                    key: const Key('LogoutButton'),
                    onPressed: () => Navigator.pop(context), 
                    child: const Text('Logout', style: TextStyle(fontSize: 21, color: Colors.white))
                  ),
                )
              ],
            ),
...
